testData/annotators/functions/IncorrectFuncNameNoArgs_expected.Camel
${<error descr="Function does not exist">headedAs()</error>}